# module_lamemp3

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/libs/: lib_dongle_release_20240313.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test.pcm
app/src/main/java/com/kalu/lamemp3/: HuanApp.java  MainActivity.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
module_lamemp3/: build.gradle  proguard-rules.pro
module_lamemp3/src/main/: AndroidManifest.xml
module_lamemp3/src/main/cpp/: CMakeLists.txt  lame_util.c  lame_util.h
module_lamemp3/src/main/java/lib/kalu/lamemp3/: LameUtil.java
module_lamemp3/src/main/res/layout/: dongle_warning.xml
module_lamemp3/src/main/res/values/: dongle_dimens.xml  dongle_strings.xml
module_lamemp3/src/main/res/xml/: dongle_usb.xml
